Cors configuration review (#78)
* feat: replace insecure WebConfig.java with OpenApiConfigFactory

Create environment-driven OpenApiConfigFactory and remove duplicates

Co-authored-by: Mehrdad Karami <7278209+metao1@users.noreply.github.com>

* feat: update documentation for inventory reduction in payment saga

Add inventory reduction leg to saga diagram, text, and Kafka topics table.

Co-authored-by: Mehrdad Karami <7278209+metao1@users.noreply.github.com>

* feat: wire "View Details" button to accessible OrderDetailsModal

Add modal to display order and payment details without new API calls

Co-authored-by: Mehrdad Karami <7278209+metao1@users.noreply.github.com>

* feat: integrate VAT calculations into order-microservice

Wire unused VAT value object into totalPrice calculation and fix tax bug.

Co-authored-by: Mehrdad Karami <7278209+metao1@users.noreply.github.com>

* feat: simplify saga level sequence diagram

Condense diagram to key actors and events, add event summary table

Co-authored-by: Mehrdad Karami <7278209+metao1@users.noreply.github.com>

* fix: resolve order status and total price discrepancies

Update 'mapOrderStatus' and recompute 'lineTotal' for accurate order status display.

Co-authored-by: Mehrdad Karami <7278209+metao1@users.noreply.github.com>

* updated event types

* updated frontned with status

* fixed api.mock

* fixed the Docker and Cors

* fixed the Docker and Cors

* fixed the Docker and Cors

* added KafkaTransactions and fixed CORS

* enabled kafka transaction only when transacation-id is visible in the configuration

* fixed coloring of status

* fixed PersistOrderServiceTest test

* fixed OrderManagementServiceTest

* fixed gradle api build

* Update inventory-microservice/src/main/java/com/metao/book/product/application/config/KafkaConsumerConfig.java

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

* Update build.gradle

Co-authored-by: github-actions[bot] <41898282+github-actions[b